; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/extr_nfs.c_vlc_mount_mainloop.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/extr_nfs.c_vlc_mount_mainloop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_9__* }
%struct.TYPE_9__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_8__*, i32 (%struct.TYPE_8__*)*)* @vlc_mount_mainloop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlc_mount_mainloop(%struct.TYPE_8__* %0, i32 (%struct.TYPE_8__*)* %1) #0 {
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca i32 (%struct.TYPE_8__*)*, align 8
  %5 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  store i32 (%struct.TYPE_8__*)* %1, i32 (%struct.TYPE_8__*)** %4, align 8
  %6 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %6, i32 0, i32 0
  %8 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  store %struct.TYPE_9__* %8, %struct.TYPE_9__** %5, align 8
  %9 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = icmp ne i32* %11, null
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %16 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = load i32 (%struct.TYPE_8__*)*, i32 (%struct.TYPE_8__*)** %4, align 8
  %20 = call i32 @vlc_rpc_mainloop(%struct.TYPE_8__* %15, i32* %18, i32 (%struct.TYPE_8__*)* %19)
  ret i32 %20
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @vlc_rpc_mainloop(%struct.TYPE_8__*, i32*, i32 (%struct.TYPE_8__*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
